# m1-8-writer

./: LICENSE  README.md  entry_points.cfg  register.py  requirements.txt  setup.cfg  setup.py
app/: __init__.py  writer.py
m18writer/: __init__.py  writer.py
