[metadata]
name = m1-8-writer
version = 0.4
description = LED name badge writer.
long_description = file: README.md
license = attr: app.__license__
author= attr: app.__author__
author_email = attr: app.__contact__
url = https://github.com/amane-katagiri/m1-8-writer
keywords=led, badge, usb, serial, m1-8
classifiers=
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
packages = find:
install_requires =
  pyserial
  Pillow
entry_points = file: entry_points.cfg
