[metadata]
name = m1-8-writer
version = attr: m18writer.__version__
description = LED name badge writer.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author= Amane Katagiri
author_email = amane@ama.ne.jp
url = https://github.com/amane-katagiri/m1-8-writer
keywords=led, badge, usb, serial, m1-8
classifiers=
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
packages = find:
install_requires =
  pyserial
  Pillow
entry_points = file: entry_points.cfg
